# some-projects

./: README
Karnaukhov_Vsevolod_cw/src/: BMP.h  Makefile  a.out  bmpfile.c  bmptools.c  main.c
Labs_OS/LR2/: LR2.docx
Labs_OS/LR2/1/: FileSystemObserver.sh  log_1.txt
Labs_OS/LR2/10/: log_10.txt  modBridge.c
Labs_OS/LR2/2/: HardLinksObserver.sh  log_2.txt
Labs_OS/LR2/3/: log_3.txt
Labs_OS/LR2/4/: SoftLinksObserver.sh  log_4.txt
Labs_OS/LR2/5/: log_5.txt
Labs_OS/LR2/6/: log_6.txt
Labs_OS/LR2/7/: DirBomb.sh  log_7.txt
Labs_OS/LR2/8/: log_8.txt
Labs_OS/LR3-4/: Karnaukhov_Vsevolod_lb3.odt
Labs_OS/LR3-4/1/: code.cpp  log.txt
Labs_OS/LR3-4/11/: father.c  log_father.txt  nice.c  nice_log.txt  son.c
Labs_OS/LR3-4/12/: father.c  father2.c  log_father.txt  log_father2.txt  ps_father.txt  ps_father2.txt  son.c  son2.c
Labs_OS/LR3-4/13_1 (Состояния процессов)/: father.c  log.txt  son_a.c  son_b.c  son_c.c
Labs_OS/LR3-4/14/: 14.txt  log.txt
Labs_OS/LR3-4/15/: code2.c  log_code.txt  log_code2.txt  log_my_program.txt
Labs_OS/LR3-4/17/: log.txt
Labs_OS/LR3-4/18/: code.c  log.txt
Labs_OS/LR3-4/19/: code.c  file.txt  thread1.txt  thread3.txt
Labs_OS/LR3-4/2/: code.cpp  log.txt
Labs_OS/LR3-4/20/: thread1.txt
Labs_OS/LR3-4/21/: code.c  thread1.txt  thread2.txt  thread3.txt
Labs_OS/LR3-4/22/: ThreadTargeting.c  keyChange.c  log_multipleThreadTargeting.txt  multipleThreadTargeting.c
Labs_OS/LR3-4/23/: log_reciever.txt  log_sender.txt  receiver.c
Labs_OS/LR3-4/24/: log_mulThreadingFIFO.txt  log_mulThreadingRR.txt  log_priorityChanging.txt  mulThreadingFIFO.c  mulThreadingRR.c  priorityChanging.c
Labs_OS/LR3-4/3/: code.cpp  log.txt
Labs_OS/LR3-4/4/: code.cpp  log_FIFO.txt  log_OTHER.txt  log_RR.txt  log_chrt.txt
Labs_OS/LR3-4/5-7/: father.c  proc_table_1.txt  proc_table_2.txt  son.c
Labs_OS/LR3-4/8/: code.c  experiment.c  log1.txt  logexp.txt
Labs_OS/LR3-4/9/: father.c  father1.c  father2.c  father3.c  file.txt  log.txt  log_father.txt  log_father1.txt  log_father2.txt  son1.c  son2.c  son3.c  son4.c  son5.c
Labs_OS/LR4/: .~lock.Karnaukhov_Vsevolod_lb4.odt#  Karnaukhov_Vsevolod_lb4.odt
Labs_OS/LR4/14/: log.txt
Labs_OS/LR4/15/: code  code.c  log_my_program.txt  log_process.txt  my_program.c  process1  process1.c  process2  process2.c
Labs_OS/LR4/16/: log_tty1.txt  log_tty2.txt
Labs_OS/LR4/18/: code
Labs_OS/LR4/19/: code  thread2.txt
Labs_OS/LR4/20/: code  code.c  file.txt
Labs_OS/LR4/21/: code  file.txt
Labs_OS/LR4/22/: TT  code  code.c  code.txt  keyChange  log_keyChange.txt  log_threadTargeting.txt  multipleTT
Labs_OS/LR4/23/: receiver  sender  sender.c
Labs_OS/LR4/24/: FIFO  PC  RR  log_mulThreadingFIFO.txt  log_mulThreadingRR.txt  log_outerChange.txt  log_priorityChanging.txt  mulThreadingFIFO.c  mulThreadingRR.c  priorityChanging.c
Labs_OS/LR5/: Karnaukhov_Vsevolod_lb5.odt
Labs_OS/LR5/1/: log_maskingSignal.txt  log_oldactSignal.txt  log_setHandler.txt  log_setHandler2.txt  maskingSignals.c  oldactSignals.c  setHandler.c  setHandler2.c
Labs_OS/LR5/2/: reliableSignals.c
Labs_OS/LR5/3/: log_reliableSignals.txt  log_unreliableSignals.txt  unreliableSignals.c
Labs_OS/LR5/4/: log_SubSignals.txt  log_sameSubSignal.txt  sameSubSignal.c  subSignals.c
Labs_OS/LR5/5/: log_signalAnarchism.txt  log_signalsOrder.txt  log_subRealTimeSignals.txt  signalAnarchism.c  signalsOrder.c  src  subRealTimeSignals.c
Labs_OS/LR5/7/: log_sameRTSignalsFIFO.txt  sameRTSignalsFIFO.c
Labs_OS/LR6/: Karnaukhov_Vsevolod_lb6.odt
Labs_OS/LR6/10/: client.c  log_client.txt  log_server.txt  server.c
Labs_OS/LR6/11/: events  events.c  log_events.txt
Labs_OS/LR6/12/: log_client1.txt  log_client2.txt  log_server.txt  server.c
Labs_OS/LR6/13/: client.c  log_client.txt  log_server.txt
Labs_OS/LR6/14/: client.c  log_1000_clients.txt  log_100_clients.txt  server.c  (+1 more)
OOP/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  Mechanics.cpp  Mechanics.h  Player.cpp  Player.h  main.cpp  uml
OOP/ProjectEchoes/: main.cpp
OOP/ProjectEchoes/Events/: Event.h  Finish.cpp  Finish.h  Heal.cpp  Heal.h  MapUpdate.cpp  MapUpdate.h  SpikeDamage.cpp  SpikeDamage.h  Teleport.cpp  Teleport.h
OOP/ProjectEchoes/Game/: InputModelSetter.cpp  InputModelSetter.h  KeyboardInput.cpp  KeyboardInput.h  Launcher.cpp  Launcher.h  settings.txt
OOP/ProjectEchoes/Game/Commands/: Command.h  Down.cpp  Down.h  Left.cpp  Left.h  Quit.cpp  Quit.h  Right.cpp  Right.h  Up.cpp  Up.h
OOP/ProjectEchoes/Game/ControlSchemes/: ControlScheme.h  DefaultControl.cpp  DefaultControl.h  KeyboardControl.cpp  KeyboardControl.h  NetworkCommands.h  SettingsControl.cpp  SettingsControl.h  TerminalControl.cpp  TerminalControl.h
OOP/ProjectEchoes/Game/Input/: Input.h  TerminalInput.cpp  TerminalInput.h
OOP/ProjectEchoes/Game/Logging/: FileLogging.cpp  FileLogging.h  Logging.h  LoggingManager.cpp  LoggingManager.h  OstreamOverload.cpp  OstreamOverload.h  TerminalLogging.cpp  TerminalLogging.h  logs.txt
OOP/ProjectEchoes/Game/Logging/Logs/: Log.h  LooseLog.cpp  LooseLog.h  NewGameLog.cpp  NewGameLog.h  QuitLog.cpp  QuitLog.h  UnidentifiedCommandLog.cpp  UnidentifiedCommandLog.h  UsedCommandLog.cpp  UsedCommandLog.h  WinLog.cpp  WinLog.h
OOP/ProjectEchoes/Game/Rendering/: CLIRenderer.cpp  CLIRenderer.h  Renderer.h  RenderingWatcher.cpp  RenderingWatcher.h  Watcher.cpp  Watcher.h
OOP/ProjectEchoes/Game/Rendering/Observers/: EventObserver.cpp  EventObserver.h  HPObserver.cpp  HPObserver.h  MechanicsObserver.h  PositionObserver.cpp  PositionObserver.h
OOP/ProjectEchoes/Levels/Level_1/: 1.txt
OOP/ProjectEchoes/Levels/Level_2/: 1.txt
OOP/ProjectEchoes/Player/: Mechanics.cpp  Mechanics.h  Player.cpp  Player.h
OOP/ProjectEchoes/World/: Cell.cpp  Cell.h  Field.cpp  Field.h  Generator.cpp  Generator.h  Level.cpp  Level.h  Point.cpp  Point.h  Portal.cpp  Portal.h  a.txt
OOP/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  hl3  knife_and_wonders
goyda/: DataBaseEditing.c  DataBaseEditing.h  DataBaseIO.c  DataBaseIO.h  cmd.c  cmd.h  encoder.c  main.c  makefile  movieList.txt
(+69 files in other folders)
