add_executable(
hl3
ProjectEchoes/main.cpp
ProjectEchoes/Player/Player.h
ProjectEchoes/Player/Player.cpp
ProjectEchoes/Player/Mechanics.h
ProjectEchoes/Player/Mechanics.cpp
ProjectEchoes/World/Cell.h
ProjectEchoes/World/Cell.cpp
ProjectEchoes/World/Field.h
ProjectEchoes/World/Field.cpp
ProjectEchoes/World/Point.h
ProjectEchoes/World/Point.cpp
ProjectEchoes/World/Generator.h
ProjectEchoes/World/Generator.cpp
ProjectEchoes/Events/Event.h
ProjectEchoes/Events/SpikeDamage.h
ProjectEchoes/Events/SpikeDamage.cpp
ProjectEchoes/Events/Heal.h
ProjectEchoes/Events/Heal.cpp
ProjectEchoes/Events/Teleport.h
ProjectEchoes/Events/Teleport.cpp
ProjectEchoes/Events/Finish.h
ProjectEchoes/Events/Finish.cpp
ProjectEchoes/Events/MapUpdate.h
ProjectEchoes/Events/MapUpdate.cpp
ProjectEchoes/World/Level.h
ProjectEchoes/World/Level.cpp
ProjectEchoes/World/Portal.h
ProjectEchoes/World/Portal.cpp
ProjectEchoes/Game/Launcher.h
ProjectEchoes/Game/Launcher.cpp
ProjectEchoes/Game/Commands/Command.h
ProjectEchoes/Game/Commands/Left.h
ProjectEchoes/Game/Commands/Left.cpp
ProjectEchoes/Game/Commands/Right.h
ProjectEchoes/Game/Commands/Right.cpp
ProjectEchoes/Game/Commands/Up.h
ProjectEchoes/Game/Commands/Up.cpp
ProjectEchoes/Game/Commands/Down.h
ProjectEchoes/Game/Commands/Down.cpp
ProjectEchoes/Game/Commands/Quit.h
ProjectEchoes/Game/Commands/Quit.cpp
ProjectEchoes/Game/ControlSchemes/ControlScheme.h
ProjectEchoes/Game/ControlSchemes/KeyboardControl.h
ProjectEchoes/Game/ControlSchemes/KeyboardControl.cpp
ProjectEchoes/Game/Input/Input.h
ProjectEchoes/Game/Input/TerminalInput.h
ProjectEchoes/Game/Input/TerminalInput.cpp
ProjectEchoes/Game/InputModelSetter.h
ProjectEchoes/Game/InputModelSetter.cpp
ProjectEchoes/Game/Rendering/Watcher.h
ProjectEchoes/Game/Rendering/Watcher.cpp
ProjectEchoes/Game/Rendering/Renderer.h
ProjectEchoes/Game/Rendering/CLIRenderer.h
ProjectEchoes/Game/Rendering/CLIRenderer.cpp
ProjectEchoes/Events/Event.h
ProjectEchoes/Events/SpikeDamage.h
ProjectEchoes/Events/SpikeDamage.cpp
ProjectEchoes/Events/Heal.h
ProjectEchoes/Events/Heal.cpp
ProjectEchoes/Events/Teleport.h
ProjectEchoes/Events/Teleport.cpp
ProjectEchoes/Events/Finish.h
ProjectEchoes/Events/Finish.cpp
ProjectEchoes/Events/MapUpdate.h
ProjectEchoes/Events/MapUpdate.cpp
)
