add_executable(
hl3
ProjectEchoes/main.cpp
ProjectEchoes/Player/Player.h
ProjectEchoes/Player/Player.cpp
ProjectEchoes/Player/Mechanics.h
ProjectEchoes/Player/Mechanics.cpp
ProjectEchoes/World/Cell.h
ProjectEchoes/World/Cell.cpp
ProjectEchoes/World/Field.h
ProjectEchoes/World/Field.cpp
ProjectEchoes/World/Point.h
ProjectEchoes/World/Point.cpp
ProjectEchoes/Events/Event.h
ProjectEchoes/Events/SpikeDamage.h
ProjectEchoes/Events/SpikeDamage.cpp
ProjectEchoes/Events/Heal.h
ProjectEchoes/Events/Heal.cpp
ProjectEchoes/Events/Teleport.h
ProjectEchoes/Events/Teleport.cpp
ProjectEchoes/World/Generator.h
ProjectEchoes/World/Generator.cpp
ProjectEchoes/Events/Finish.h
ProjectEchoes/Events/Finish.cpp
ProjectEchoes/Events/MapUpdate.h
ProjectEchoes/Events/MapUpdate.cpp
ProjectEchoes/World/Level.h
ProjectEchoes/World/Level.cpp
ProjectEchoes/World/Portal.h
ProjectEchoes/World/Portal.cpp
ProjectEchoes/Game/Launcher.h
ProjectEchoes/Game/Launcher.cpp
ProjectEchoes/Game/Commands/Command.h
ProjectEchoes/Game/Commands/Left.h
ProjectEchoes/Game/Commands/Left.cpp
ProjectEchoes/Game/Commands/Right.h
ProjectEchoes/Game/Commands/Right.cpp
ProjectEchoes/Game/Commands/Up.h
ProjectEchoes/Game/Commands/Up.cpp
ProjectEchoes/Game/Commands/Down.h
ProjectEchoes/Game/Commands/Down.cpp
ProjectEchoes/Game/ControlSchemes/DefaultControl.h
ProjectEchoes/Game/ControlSchemes/DefaultControl.cpp
ProjectEchoes/Game/ControlSchemes/ControlScheme.h
ProjectEchoes/Game/ControlSchemes/TerminalControl.h
ProjectEchoes/Game/ControlSchemes/TerminalControl.cpp
ProjectEchoes/Game/ControlSchemes/SettingsControl.h
ProjectEchoes/Game/ControlSchemes/SettingsControl.cpp
ProjectEchoes/Game/KeyboardInput.h
ProjectEchoes/Game/KeyboardInput.cpp
)
