add_executable(
hl3
ProjectEchoes/main.cpp
ProjectEchoes/Player/Player.h
ProjectEchoes/Player/Player.cpp
ProjectEchoes/Player/Mechanics.h
ProjectEchoes/Player/Mechanics.cpp
ProjectEchoes/World/Cell.h
ProjectEchoes/World/Cell.cpp
ProjectEchoes/World/Field.h
ProjectEchoes/World/Field.cpp
ProjectEchoes/World/Point.h
ProjectEchoes/World/Point.cpp
ProjectEchoes/World/Generator.h
ProjectEchoes/World/Generator.cpp
ProjectEchoes/Events/Event.h
ProjectEchoes/Events/SpikeDamage.h
ProjectEchoes/Events/SpikeDamage.cpp
ProjectEchoes/Events/Heal.h
ProjectEchoes/Events/Heal.cpp
ProjectEchoes/Events/Teleport.h
ProjectEchoes/Events/Teleport.cpp
ProjectEchoes/Events/Finish.h
ProjectEchoes/Events/Finish.cpp
ProjectEchoes/Events/MapUpdate.h
ProjectEchoes/Events/MapUpdate.cpp
ProjectEchoes/World/Level.h
ProjectEchoes/World/Level.cpp
ProjectEchoes/World/Portal.h
ProjectEchoes/World/Portal.cpp
ProjectEchoes/Game/Launcher.h
ProjectEchoes/Game/Launcher.cpp
ProjectEchoes/Game/Commands/Command.h
ProjectEchoes/Game/Commands/Left.h
ProjectEchoes/Game/Commands/Left.cpp
ProjectEchoes/Game/Commands/Right.h
ProjectEchoes/Game/Commands/Right.cpp
ProjectEchoes/Game/Commands/Up.h
ProjectEchoes/Game/Commands/Up.cpp
ProjectEchoes/Game/Commands/Down.h
ProjectEchoes/Game/Commands/Down.cpp
ProjectEchoes/Game/Commands/Quit.h
ProjectEchoes/Game/Commands/Quit.cpp
ProjectEchoes/Game/ControlSchemes/ControlScheme.h
ProjectEchoes/Game/ControlSchemes/KeyboardControl.h
ProjectEchoes/Game/ControlSchemes/KeyboardControl.cpp
ProjectEchoes/Game/Input/Input.h
ProjectEchoes/Game/Input/TerminalInput.h
ProjectEchoes/Game/Input/TerminalInput.cpp
ProjectEchoes/Game/InputModelSetter.h
ProjectEchoes/Game/InputModelSetter.cpp
ProjectEchoes/Game/Rendering/RenderingWatcher.h
ProjectEchoes/Game/Rendering/RenderingWatcher.cpp
ProjectEchoes/Game/Rendering/Observers/MechanicsObserver.h
ProjectEchoes/Game/Rendering/Observers/EventObserver.h
ProjectEchoes/Game/Rendering/Observers/EventObserver.cpp
ProjectEchoes/Game/Rendering/Observers/PositionObserver.h
ProjectEchoes/Game/Rendering/Observers/PositionObserver.cpp
ProjectEchoes/Game/Rendering/Observers/HPObserver.h
ProjectEchoes/Game/Rendering/Observers/HPObserver.cpp
ProjectEchoes/Game/Rendering/Renderer.h
ProjectEchoes/Game/Rendering/CLIRenderer.h
ProjectEchoes/Game/Rendering/CLIRenderer.cpp
ProjectEchoes/Events/Event.h
ProjectEchoes/Events/SpikeDamage.h
ProjectEchoes/Events/SpikeDamage.cpp
ProjectEchoes/Events/Heal.h
ProjectEchoes/Events/Heal.cpp
ProjectEchoes/Events/Teleport.h
ProjectEchoes/Events/Teleport.cpp
ProjectEchoes/Events/Finish.h
ProjectEchoes/Events/Finish.cpp
ProjectEchoes/Events/MapUpdate.h
ProjectEchoes/Events/MapUpdate.cpp
ProjectEchoes/Game/Logging/Logs/Log.h
ProjectEchoes/Game/Logging/Logs/LooseLog.h
ProjectEchoes/Game/Logging/Logs/LooseLog.cpp
ProjectEchoes/Game/Logging/Logs/NewGameLog.h
ProjectEchoes/Game/Logging/Logs/NewGameLog.cpp
ProjectEchoes/Game/Logging/Logs/UnidentifiedCommandLog.h
ProjectEchoes/Game/Logging/Logs/UnidentifiedCommandLog.cpp
ProjectEchoes/Game/Logging/Logs/UsedCommandLog.h
ProjectEchoes/Game/Logging/Logs/UsedCommandLog.cpp
ProjectEchoes/Game/Logging/Logs/WinLog.h
ProjectEchoes/Game/Logging/Logs/WinLog.cpp
ProjectEchoes/Game/Logging/Logs/QuitLog.h
ProjectEchoes/Game/Logging/Logs/QuitLog.cpp
ProjectEchoes/Game/Logging/OstreamOverload.h
ProjectEchoes/Game/Logging/OstreamOverload.cpp
ProjectEchoes/Game/Logging/Logging.h
ProjectEchoes/Game/Logging/FileLogging.h
ProjectEchoes/Game/Logging/FileLogging.cpp
ProjectEchoes/Game/Logging/TerminalLogging.h
ProjectEchoes/Game/Logging/TerminalLogging.cpp
ProjectEchoes/Game/Logging/LoggingManager.h
ProjectEchoes/Game/Logging/LoggingManager.cpp
)
